# ubiwhere-exercise

./: .pre-commit-config.yaml  Dockerfile  README.md  Traffic API.postman_collection.json  compose.yml  pyproject.toml
.github/workflows/: django.yml
core/: admin.py  apps.py  authentication.py  fixtures.py  models.py  permissions.py  spectacular_auth.py
core/management/commands/: create_user_and_sensor_token.py
core/migrations/: 0001_initial.py
django_project/: settings.py  urls.py
sensors/: fixtures.py  models.py
sensors/management/commands/: import_sensors.py
sensors/migrations/: 0001_initial.py
traffic/: admin.py  filters.py  fixtures.py  models.py  serializers.py  tests.py  urls.py  views.py
traffic/management/commands/: import_traffic_and_routes.py
traffic/migrations/: 0001_initial.py  0002_alter_trafficrecorder_options_trafficcarrecord.py
vehicles/: admin.py  fixtures.py  models.py  serializers.py  tests.py  urls.py  views.py
vehicles/migrations/: 0001_initial.py
